--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,13 @@
-PORT = 3333
-NODE_ENV = development
+PORT = 3333 # default port
+NODE_ENV = development # default environment
+DATABASE = 
+PROJECT_ID = 
+PRIVATE_KEY_ID = 
+PRIVATE_KEY = 
+CLIENT_EMAIL =
+CLIENT_ID = 
+AUTH_URI = 
+TOKEN_URI =
+AUTH_PROVIDER_X509_CERT_URL = 
+CLIENT_X509_CERT_URL = 
+UNIVERSE_DOMAIN = 
