--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
+    "firebase-admin": "13.0.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
