--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/jwt": "9.0.2",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "firebase-admin": "13.0.2",
