--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,8 @@
 {
   "emulators": {
     "firestore": {
-      "port": 8080
+      "port": 8081,
+      "host": "localhost"
     },
     "auth": {
       "port": 9099
