--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -1,13 +1,12 @@
 name: Run E2E Tests
 
-on: [push]
+on: [pull_request]
 
 jobs:
   run-e2e-tests:
     name: Run E2E Tests
     runs-on: ubuntu-latest
-    services:
-      
+
     steps:
       # Checkout do código
       - uses: actions/checkout@v3
@@ -28,7 +27,7 @@ jobs:
       - run: npm ci
       
       # Iniciar emuladores do Firebase
-      - run: npm run test:emulators
+      - run: npm run test:emulators &
       
       # Executar os testes E2E
       - run: npm run test:e2e
