add PROJECT_ID environment variable to E2E tests workflow

--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -34,3 +34,4 @@ jobs:
         env:
           JWT_SECRET: testing
           DATABASE_URL: "rocha-tech-test"
+          PROJECT_ID: "rocha-pecas-diesel"
