--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -1,6 +1,10 @@
 name: Run E2E Tests
 
-on: [pull_request]
+on: 
+  pull_request:
+    branches:
+      - main  # ou o nome da branch de destino para PRs, caso seja diferente
+      - dev
 
 jobs:
   run-e2e-tests:
@@ -9,33 +13,34 @@ jobs:
 
     steps:
       # Checkout do código
-      - uses: actions/checkout@v3
-      
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       # Configurar Node.js
-      - uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 20
           cache: 'npm'
       
       # Configurar Java JDK 11
-      - uses: actions/setup-java@v3
+      - name: Setup Java JDK 11
+        uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: 11
           distribution: 'temurin' # Temurin é recomendado como distribuição open-source do JDK
-      
+
       # Instalar dependências do projeto
-      - run: npm ci
-      
+      - name: Install dependencies
+        run: npm ci
+
       # Iniciar emuladores do Firebase
-      - run: npm run test:emulators
-        env:
-          JWT_SECRET: testing
-          DATABASE_URL: "rocha-tech-test"
-          PROJECT_ID: "rocha-pecas-diesel"
+      - name: Start Firebase Emulators
+        run: npm run test:emulators &
       
       # Executar os testes E2E
-      - run: npm run test:e2e
+      - name: Run E2E tests
+        run: npm run test:e2e
         env:
           JWT_SECRET: testing
           DATABASE_URL: "rocha-tech-test"
-          PROJECT_ID: "rocha-pecas-diesel"
