--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -1,7 +1,7 @@
 name: Run E2E Tests
 
 on: 
-  pull_request:
+  push:
     branches:
       - main  # ou o nome da branch de destino para PRs, caso seja diferente
       - dev
@@ -27,16 +27,18 @@ jobs:
       - name: Setup Java JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: 11
+          java-version: '11'
           distribution: 'temurin' # Temurin é recomendado como distribuição open-source do JDK
 
       # Instalar dependências do projeto
       - name: Install dependencies
         run: npm ci
 
-      # Iniciar emuladores do Firebase
+      # Iniciar emuladores do Firebase em segundo plano
       - name: Start Firebase Emulators
-        run: npm run test:emulators &
+        run: |
+          nohup npm run test:emulators & 
+          sleep 10 # Aguarda 10 segundos para garantir que os emuladores estejam prontos
       
       # Executar os testes E2E
       - name: Run E2E tests
