--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -12,3 +12,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run test
+        env:
+          JWT_SECRET: testing
+          DATABASE_URL: "rocha-tech-test"
+          PROJECT_ID : "teste"
