--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -1,7 +1,7 @@
 name: Run E2E Tests
 
 on: 
-  push:
+  pull_request:
     branches:
       - main  # ou o nome da branch de destino para PRs, caso seja diferente
       - dev
