--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:create-firebase-environment": "npm link ./vitest-environment",
-    "test:install-firebase-environment": "npm link vitest-environment",
-    "pretest:e2e": "run-s test:create-firebase-environment test:install-firebase-environment",
+    "test": " vitest run --dir src/services",
+    "test:watch": "vitest --dir src/services",
     "test:emulators": "npx firebase emulators:start",
-    "test:e2e": "vitest run --dir src/http"
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http"
   },
   "keywords": [],
   "author": "",
@@ -27,11 +25,11 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@firebase/rules-unit-testing": "4.0.1",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^22.10.5",
+    "@types/supertest": "6.0.2",
     "eslint": "^8.57.1",
-    "npm-run-all": "4.1.5",
+    "supertest": "7.0.0",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
