--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -47,3 +47,14 @@ jobs:
           JWT_SECRET: testing
           DATABASE_URL: "rocha-tech-test"
           PROJECT_ID : "teste"
+          DATABASE : "rocha-tech-test"
+          PROJECT_ID : ""
+          PRIVATE_KEY_ID : ""
+          PRIVATE_KEY : ""
+          CLIENT_EMAIL : ""
+          CLIENT_ID : ""
+          AUTH_URI : ""
+          TOKEN_URI : ""
+          AUTH_PROVIDER_X509_CERT_URL : ""
+          CLIENT_X509_CERT_URL : ""
+          UNIVERSE_DOMAIN : ""
