chore: Update e2e test workflow with new environment variables for authentication

--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -47,12 +47,12 @@ jobs:
           JWT_SECRET: testing
           DATABASE_URL: "rocha-tech-test"
           PROJECT_ID : "teste"
-          PRIVATE_KEY_ID : ""
-          PRIVATE_KEY : ""
-          CLIENT_EMAIL : ""
-          CLIENT_ID : ""
-          AUTH_URI : ""
-          TOKEN_URI : ""
-          AUTH_PROVIDER_X509_CERT_URL : ""
-          CLIENT_X509_CERT_URL : ""
-          UNIVERSE_DOMAIN : ""
+          PRIVATE_KEY_ID : "dwqqwdqwdqwd"
+          PRIVATE_KEY : "dqwdqwdqw"
+          CLIENT_EMAIL : "testets@teste.com"
+          CLIENT_ID : "testes"
+          AUTH_URI : "https://accounts.google.com/o/oauth2/auth"
+          TOKEN_URI : "https://oauth2.googleapis.com/token"
+          AUTH_PROVIDER_X509_CERT_URL : "https://www.googleapis.com/oauth2/v1/certs"
+          CLIENT_X509_CERT_URL : "https://www.googleapis.com/robot/v1/metadata/x509"
+          UNIVERSE_DOMAIN : "googleapis.com"
