--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -1,10 +1,6 @@
 name: Run E2E Tests
 
-on: 
-  pull_request:
-    branches:
-      - main  # ou o nome da branch de destino para PRs, caso seja diferente
-      - dev
+on: [push]
 
 jobs:
   run-e2e-tests:
