--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -18,13 +18,13 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-      
+
       # Configurar Java JDK 11
       - name: Setup Java JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-          distribution: 'temurin' # Temurin é recomendado como distribuição open-source do JDK
+          distribution: 'temurin'
 
       # Instalar dependências do projeto
       - name: Install dependencies
@@ -33,12 +33,26 @@ jobs:
       # Iniciar emuladores do Firebase em segundo plano
       - name: Start Firebase Emulators
         run: |
-          nohup npm run test:emulators & 
-          sleep 10 # Aguarda 10 segundos para garantir que os emuladores estejam prontos
-      
+          nohup npm run test:emulators > emulator.log 2>&1 &
+          while ! nc -z localhost 8081; do   
+            echo "Waiting for emulator to start..."
+            sleep 2
+          done
+          echo "Emulator is ready!"
+
       # Executar os testes E2E
       - name: Run E2E tests
         run: npm run test:e2e
         env:
+          NODE_ENV: test
           JWT_SECRET: testing
-        
+          DATABASE_URL: "rocha-tech-test"
+          PROJECT_ID: "test-project"
+          PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
+          CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
+          CLIENT_ID: ${{ secrets.FIREBASE_CLIENT_ID }}
+          AUTH_URI: "https://accounts.google.com/o/oauth2/auth"
+          TOKEN_URI: "https://oauth2.googleapis.com/token"
+          AUTH_PROVIDER_X509_CERT_URL: "https://www.googleapis.com/oauth2/v1/certs"
+          CLIENT_X509_CERT_URL: "https://www.googleapis.com/robot/v1/metadata/x509"
+          UNIVERSE_DOMAIN: "googleapis.com"
