chore: Update CLIENT_X509_CERT_URL in E2E test workflow for Firebase service account

--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -55,5 +55,5 @@ jobs:
           AUTH_URI: "https://accounts.google.com/o/oauth2/auth"
           TOKEN_URI: "https://oauth2.googleapis.com/token"
           AUTH_PROVIDER_X509_CERT_URL: "https://www.googleapis.com/oauth2/v1/certs"
-          CLIENT_X509_CERT_URL: "https://www.googleapis.com/robot/v1/metadata/x509"
+          CLIENT_X509_CERT_URL: "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-pa91s%40rocha-pecas-diesel.iam.gserviceaccount.com"
           UNIVERSE_DOMAIN: "googleapis.com"
