--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -61,6 +61,7 @@ jobs:
         env:
           NODE_ENV: test
           PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+          JWT_SECRET: test
           PRIVATE_KEY_ID: ${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
           PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
           CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
