--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -1,6 +1,10 @@
 name: Run E2E Tests
 
-on: [push]
+on: 
+  pull_request:
+    branches:
+      - main  # ou o nome da branch de destino para PRs, caso seja diferente
+      - dev
 
 jobs:
   run-e2e-tests:
