--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@fastify/jwt": "9.0.2",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
-    "firebase-admin": "13.0.2",
+    "firebase-admin": "13.1.0",
+    "firebase-functions": "6.3.1",
     "firebase-tools": "13.29.1",
     "zod": "^3.24.1"
   },
